# generativeimagevertexai

./: Dockerfile  Dockerfileollama  README.md  pyproject.toml
src/: main.py
