[tool.poetry]
name = "generativeimages"
version = "1.0.0"
description = ""
authors = ["jggomez <juan.gomez01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gradio = "^4.43.0"
langchain-community = "^0.2.16"
google-cloud-aiplatform = "^1.65.0"
langchain-ollama = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
